Reworked auto-scale service